<?xml version="1.0"?>
<package format="3">
  <name>conveyor_sort</name>
  <version>0.0.1</version>
  <description>Smart Vision-Based Conveyor Sorting System with Jam Detection</description>
  <maintainer email="krutibagwe21@gmail.com">Kruti Bagwe</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rosidl_default_generators</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>